update font families to avoid cursive on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* General styles */
 body {
     background-color: #39ff14; /* 90s neon green */
-    font-family: "Comic Sans MS", "Comic Sans", cursive; /* Popular 90s font */
+    font-family: "Comic Sans MS", "Comic Sans", Helvetica, Arial, sans-serif;
     color: #333;
     margin: 0;
     padding: 0;
